--- a/tasks/install.deb.yml
+++ b/tasks/install.deb.yml
@@ -1,19 +1,47 @@
 ---
 
-- name: Add ElasticSearch Key
+- name: Add Elasticsearch Key
   apt_key: url="{{elasticsearch_key_url}}" state=present
 
-- name: Add ElasticSearch Repository
+- name: Add Elasticsearch Repository
   apt_repository: repo="{{elasticsearch_apt_repo}}" state=present
 
-- name: Install ElasticSearch
+- name: Install Elasticsearch
   apt: pkg={{item}}
   with_items: [ elasticsearch ]
 
 - name: Configure limits max_open_files
   lineinfile:
     dest=/etc/security/limits.conf
-    regexp='^{{ elasticsearch_user }}     -    nofile    {{ elasticsearch_max_open_files }}'
+    regexp='^{{ elasticsearch_user }} - nofile {{ elasticsearch_max_open_files }}'
     insertafter=EOF
-    line='{{ elasticsearch_user }}     -    nofile    {{ elasticsearch_max_open_files }}'
+    line='{{ elasticsearch_user }} - nofile {{ elasticsearch_max_open_files }}'
   when: elasticsearch_max_open_files is defined
+  notify: elasticsearch restart
+
+- name: Configure limits max_locked_memory
+  lineinfile:
+    dest=/etc/security/limits.conf
+    regexp='^{{ elasticsearch_user }} - memlock {{ elasticsearch_max_locked_memory }}'
+    insertafter=EOF
+    line='{{ elasticsearch_user }} - memlock {{ elasticsearch_max_locked_memory }}'
+  when: elasticsearch_max_locked_memory is defined
+  notify: elasticsearch restart
+
+- name: Configure /etc/elasticsearch/elasticsearch.yml
+  template:
+    src=elasticsearch.yml.j2
+    dest=/etc/elasticsearch/elasticsearch.yml
+    owner={{ elasticsearch_user }}
+    group={{ elasticsearch_group }}
+    mode=0644
+  notify: elasticsearch restart
+
+- name: Configure /etc/default/elasticsearch
+  template:
+    src=elasticsearch.default.j2
+    dest=/etc/default/elasticsearch
+    owner={{ elasticsearch_user }}
+    group={{ elasticsearch_group }}
+    mode=0644
+  notify: elasticsearch restart
