--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,3 +7,5 @@ elasticsearch_key_url: https://packages.elastic.co/GPG-KEY-elasticsearch
 elasticsearch_apt_repo: "deb http://packages.elastic.co/elasticsearch/2.x/debian stable main"
 elasticsearch_max_open_files: 65535
 elasticsearch_cluster_name: elasticsearch
+elasticsearch_home_dir: /usr/share/elasticsearch
+elasticsearch_plugins: []
