--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,9 @@
   when: ansible_os_family == 'Debian'
   tags: [elasticsearch, install]
 
+- include: plugin.yml
+  tags: [elasticsearch, install]
+
 - include: config.deb.yml
   when: ansible_os_family == 'Debian'
   tags: [elasticsearch, config]
