Fix IK plugin install task

--- a/tasks/ik.yml
+++ b/tasks/ik.yml
@@ -8,16 +8,16 @@
   get_url:
     url={{ elasticsearch_ik_url }}
     dest=/tmp/ik.{{ elasticsearch_ik_version }}.zip
-  when: plugin_ik.stat.exists is not defined
+  when: not plugin_ik.stat.exists
 
 - name: Clean IK directory
   file: path={{ elasticsearch_home_dir }}/plugins/ik state=absent
-  when: plugin_ik.stat.exists is not defined
+  when: not plugin_ik.stat.exists
 
 - name: Ensure IK directory
   file: path={{ elasticsearch_home_dir }}/plugins/ik state=directory
-  when: plugin_ik.stat.exists is not defined
+  when: not plugin_ik.stat.exists
 
 - name: Extract IK plugin
   unarchive: src=/tmp/ik.{{ elasticsearch_ik_version }}.zip dest={{ elasticsearch_home_dir }}/plugins/ik copy=no
-  when: plugin_ik.stat.exists is not defined
+  when: not plugin_ik.stat.exists
